update covid diary

--- a/_posts/2020-03-24-COVID19.md
+++ b/_posts/2020-03-24-COVID19.md
@@ -38,5 +38,12 @@ Dacon에서 주어진 데이터 셋은 총 10개입니다.
 
 크게 **환자와 관련된 자료**, **시계열 자료**, **지역 연관 자료**, **검색어 트렌드** 로 데이터를 구분지을 수 있을 것 같습니다. (Key 값 기준)
 최대한 많은 정보를 한 셋에 묶어서 시각화할 수 있도록 데이터들을 Merge하고 분석을 진행할 예정입니다.
+(하지만 먼저 개별 데이터셋을 살펴보고 Merge를 생각해보겠습니다.)
+- - -
 
-### Time
+### Time Related
+일단은 먼저 Time 계열 데이터셋을 가지고 간단하게 살펴보겠습니다.
+
+![jpg](https://decision-J.github.io/assets/covid/time1.jpg){: width="400" height="400"}
+
+위 plot은 날짜가 지남에 따라 확진자와 사망자 수의 증가 추이를 보여주는 시계열 플랏입니다. 확진자 수가 늘어나는 추세와 사망자 수가 늘어나는 추세가 비슷한 모양을 보입니다.
