Change the title

--- a/_posts/2020-03-24-COVID-19 EDA.md
+++ b/_posts/2020-03-24-COVID-19 EDA.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 categories: competition
-title:  "COVID19"
+title:  "COVID-19 EDA"
 date:   2020-03-24
 author: HaeYong JOUNG
 tags: competition
